--- a/assets/css/roadmap.css
+++ b/assets/css/roadmap.css
@@ -196,7 +196,7 @@
     list-style: none;
     text-align: left;
     font-weight: 100;
-    max-width: 30%;
+    max-width: 75%;
   }
   .timeline h1 {
     font-family: 'Saira', sans-serif;
@@ -210,6 +210,7 @@
     letter-spacing: 1.5px;
     font-weight: 400;
     font-size: 1.4em;
+
   }
   .timeline .event {
     border-bottom: 1px dashed rgba(255, 255, 255, 0.1);
@@ -248,19 +249,18 @@
     content: "";
     top: 5px;
   }
-  @media (orientation: portriat) {
+  @media (orientation: portrait) {
     .timeline {
-      max-width: 50%;
+      max-width: 85%;
     }
     .timeline .event:before {
-      left: -230.5px;
-      min-width: 200px;
-
+      display: none
     }
     .timeline .event:after {
-      width: 50px;
-      height: 55px;
+  
       box-shadow: 0 0 0 8px #004ffc;
 
     }
+    .timeline h3 {
+      text-align: center;
   }
